# llm-political-bias-bench

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEEPSEARCH.md  LICENSE  PLAN.md  README.md  SECURITY.md  SPECIFICATIONS.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  monthly-benchmark.yml
data/proposals/: usa_2024.json
data/statements/: statements.json
results/2026-03/: likert_raw.json  likert_scores.json  position_bias.json  ranking_raw.json  ranking_scores.json  refusal_parity.json  report.md  summary.json
results/2026-04/: likert_raw.json  likert_scores.json  ranking_raw.json  ranking_scores.json  report.md  summary.json
results/2026-05/: likert_raw.json  likert_scores.json  ranking_raw.json  ranking_scores.json  report.md  summary.json
results/2026-06/: likert_raw.json  likert_scores.json  position_bias.json  ranking_raw.json  ranking_scores.json  refusal_parity.json  report.md  summary.json
scripts/: reaggregate_likert_scores.py  recompute_ranking_scores.py  reparse_ranking_raw.py  smoke_test.py
src/political_bias/: __init__.py  __main__.py  config.py  models.py  runner.py
src/political_bias/likert/: evaluator.py  judge.py  refusal.py  statements.py
src/political_bias/ranking/: evaluator.py  position_bias.py  proposals.py  scorer.py
tests/: test_judge.py  test_models_mock.py  test_parsing_and_labels.py  test_refusal.py  test_runner_incremental.py  test_scoring.py  test_statements.py
(+2 files in other folders)
