[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "political-bias"
version = "0.1.0"
description = "Monthly benchmark measuring political bias in frontier LLMs"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "openai>=1.30",
    "anthropic>=0.49",
    "google-genai>=1.0",
    "httpx>=0.27",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[project.scripts]
political-bias = "political_bias.runner:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
